@@ -10,8 +10,8 @@ home_zoom = 0.9
 home_zoom_more = 0.8
 
 [launcher]
-glow_duration_in = 500
-glow_duration_out = 500
+glow_duration_in = 100
+glow_duration_out = 100
 
 [launcher_in]
 duration = 200
